test/errors/identifiers_error/zs/prefix_zserio/zserio_subpackage_name_error.zs
package prefix_zserio.zserio_subpackage_name_error; // zserio prefix!
